10/02/16 Julien Dutheil
* Fixed bug in AlignmentFilter2: also counts gaps at begining of window!

04/02/16 Julien Dutheil
* Added support for features in BedGraph format.
* Added lift over filter as MafIterator.

08/12/15 Julien Dutheil
* Added Tajima's D computation.

22/11/15 Julien Dutheil
* Fix bug in FeatureFilter when two feature are exactly following each other.

23/04/15 Julien Dutheil
* Fix another bug in feature extraction on negative strands.

31/03/15 Julien Dutheil
* OutputAlignments now allows to discard coordinates in output.

13/01/15 Julien Dutheil
* OutputAlignments can now use coordinates of ref species infile names.

07/01/15 Julien Dutheil
* Added export filter for MSMC.

22/09/14 -*- Version 2.2.0 -*-

22/08/13 Julien Dutheil
* Sequence diversity estimators (Watterson theta)

12/08/13 Julien Dutheil
* New Four species statistics

06/03/13 -*- Version 2.1.0 -*-

05/02/13 Julien Dutheil
* Added VCF export

21/01/13 Julien Dutheil
* Compiles with -Wconversion

31/10/12 Julien Dutheil
* Added SequenceStreamToMafIterator

30/07/12 Julien Dutheil
* Migrated files from bpp-seq to bpp-seq-omics.


*** bpp-seq log copied here for information ***

18/07/12 Julien Dutheil
* Bug fixed in merge maf iterator, in case a sequence is missing in one of the two blocks.

25/06/12 Julien Dutheil
* Extended maf tools and reorganization of the code.
* Extended GFF output.
* New [] operator in SequenceFeatureSet.

18/06/12 Julien Dutheil
* Fixed bug in Maf parser: scores are now parsed correctly.

08/03/12 Julien Dutheil
* Added support for '*' character in proteins (stop codon)

09/02/12 -*- Version 2.0.3 -*-

16/01/12 Julien Dutheil
* Bug #42 solved, new support for extended fasta parser in application tools.
* Added contribution from Benoit Nabholz and Annabelle Haudry on 4-fold degenerated sites.

06/01/12 Julien Dutheil
* Added support for "!" state in nucleic alphabet, which can be either a gap or an unknown character.

24/11/11 Julien Dutheil