@@ -1,3 +1,7 @@
+26/04/16 Julien Dutheil
+* Portage to c++11
+* Added RemoveEmptySequencesMafFilter class.
+
 10/02/16 Julien Dutheil
 * Fixed bug in AlignmentFilter2: also counts gaps at begining of window!
 
@@ -9,7 +13,7 @@
 * Added Tajima's D computation.
 
 22/11/15 Julien Dutheil
-* Fix bug in FeatureFilter when two feature are exactly following each other.
+* Fix bug in FeatureFilter when two features are exactly following each other.
 
 23/04/15 Julien Dutheil
 * Fix another bug in feature extraction on negative strands.
